syntax = "proto3";

package mkit.service.comment.entities.v1;

option go_package = "github.com/ygpark2/mboard/service/comment/proto/entities";
option java_multiple_files = true;
option java_package = "mkit.service.comment.entities.v1";

// import "shared/proto/common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "options/gorm.proto";
import "types/types.proto";
import "validate/validate.proto";

// Comment Entity
message Comment {
    option (validate.disabled) = true;
    option (gorm.opts) = {
    ormable: true
  };
    // gorm.types.UUID id                      = 1  [(gorm.field).tag = {
    // type: "uuid", primary_key: true, default: "uuid_generate_v4()" }]; //
    // primary key

    gorm.types.UUID id = 1 [(gorm.field).tag = {
    type: "uuid"
    not_null: true
    unique: true
    primary_key: true
  }]; // primary key
    google.protobuf.Timestamp created_at = 2 [(gorm.field).tag = { not_null: true }];
    google.protobuf.Timestamp updated_at = 3 [(gorm.field).tag = { not_null: true }];
    google.protobuf.Timestamp deleted_at = 4 [(gorm.field).tag = { index: "idx_users_deleted_at" }];
    google.protobuf.StringValue username = 7 [(gorm.field).tag = { size: 100 not_null: true }];
    string first_name = 8 [(gorm.field).tag = { size: 255 not_null: true }];
    string last_name = 9 [(gorm.field).tag = { not_null: true }];
    string email = 10 [(gorm.field).tag = { not_null: true }];
    mkit.service.account.entities.v1.Profile profile = 11 [(gorm.field).has_one = { preload: true }];
}
